<resources>
    <string name="app_name">zd_2_2_Shaidullin</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">From the Square world,\nHello, %1$s!</string>
    <string name="title_activity_presentation._main">presentation.MainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_presentation._login">presentation.LoginActivity</string>

    <string name="username">Username</string>
    <string name="username_hint">test</string>
    <string name="password">Password</string>
    <string name="password_hint">********</string>
    <string name="login">Log In</string>
</resources>