<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".presentation.LoginActivity"
    android:background="@color/dark_primary"
    tools:deviceIds="wear">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_boxedEdges="all"
            android:layout_gravity="center"
            android:gravity="center">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/blue_color"
                android:textSize="10sp"
                android:paddingTop="17dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="21dp"
                android:paddingEnd="21dp">

                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/username_hint"
                    android:textColorHint="@color/hint_gray"
                    android:layout_marginTop="-8dp"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:backgroundTint="@color/blue_color"
                    android:autofillHints="emailAddress" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/blue_color"
                android:textSize="10sp"
                android:paddingTop="5dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="21dp"
                android:paddingEnd="21dp">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColorHint="@color/hint_gray"
                    android:layout_marginTop="-8dp"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:backgroundTint="@color/blue_color"
                    android:autofillHints="password" />

            </LinearLayout>

            <Button
                android:id="@+id/signInButton"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:background="@drawable/button"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/login"/>

        </LinearLayout>

    </ScrollView>

</androidx.wear.widget.BoxInsetLayout>